--- a/estilo.css
+++ b/estilo.css
@@ -145,32 +145,22 @@ body {
     position: relative;
 }
 
+label {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 600;
+}
+
+button,
+input:hover {
+    cursor: pointer;
+}
+
 /* HEADER */
-.container-header {
-    width: 100%;
-    height: 180px;
-    background-color: #614DD8;
-}
-
-.container {
-    max-width: 1110px;
-    margin: 0 auto;
-    height: 100px;
-}
-
-.content-white {
-    background-color: #fff;
-    position: relative;
-    top: -60px;
-    border-radius: 20px;
-    height: auto;
-}
-
-
 .navigation {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 ul {
@@ -179,7 +169,7 @@ ul {
 }
 
 ul li {
-    margin-top: 50px;
+    margin-top: 60px;
     margin-right: 25px;
 }
 
@@ -190,6 +180,12 @@ ul li a {
     font-size: 1.5rem;
     text-decoration: none;
     text-transform: uppercase;
+    width: 100%;
+}
+
+.selec {
+    text-decoration: underline #2FC6A1 4px;
+
 }
 
 
@@ -197,6 +193,7 @@ ul li a {
     display: flex;
     line-height: 15px;
     margin-top: 50px;
+    
 }
 
 .border-height {
@@ -206,17 +203,67 @@ ul li a {
 
 }
 
-h2{
-font-size: 1.5rem;
-padding: 25px;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-font-weight: 900;
+
+/* CONTAINER */
+.container-header {
+    width: 100%;
+    height: 180px;
+    background-color: #614DD8;
 }
+
+.container {
+    max-width: 1110px;
+    width: 100%;
+    margin: 0 auto;
+    height: 100px;
+}
+
+.content-white {
+    background-color: #fff;
+    position: relative;
+    top: -60px;
+    border-radius: 20px;
+    height: auto;
+    margin-bottom:20px;
+    width: 100%;
+}
+
+
+p {
+    font-size: 1.3rem;
+    padding: 10px 30px;
+    font-weight: 100;
+    font-family: sans-serif;
+    color: #494949;
+    width: 100%;
+}
+
+.texto-explicacao {
+    max-width: 610px;
+}
+
+h3 {
+    font-size: 2rem;
+    padding: 30px 0px 5px 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    width: 100%;
+}
+
+h2 {
+    font-size: 1.5rem;
+    padding: 25px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    width: 100%;
+}
+
 h1 {
     padding: 1px;
     font-size: 1.3rem;
     color: #FFFFFF;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    width: 100%;
 }
 
 h1>span {
@@ -229,31 +276,33 @@ h1>span {
 .formulario {
     padding: 20px;
     display: flex;
-    gap: 55px;
+    gap: 126px;
     flex-direction: row;
-    justify-content: center;
+    width: 100%;
 }
 
 
 .input-main {
     background: #D9D9D9;
     border-radius: 3em;
+    display: flex;
     width: 100%;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 10px;
+    padding-left: 19px;
+    padding-right: 46px;
     border: none;
-
 }
 
 
 .botoes {
     display: flex;
-    justify-content: flex-end;
-    justify-content: safe;
-    gap: 23px;
-    margin: 25px;
-    padding: 25px;
+    gap: 59px;
+    margin-top: 72px;
+    margin-left: 257px;
+    padding: 27px;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 button {
@@ -261,7 +310,17 @@ button {
     border: none;
     background: #b2b2b2;
     color: #494949;
-    padding: 3.1px 19px;
+    padding: 6.1px 22px;
+    
+}
+
+.cadastrar {
+    background: #2FC6A1;
+    color: #fff;
+    font-size: large;
+    font-weight: bold;
+    padding: 5px 28px;
+    text-decoration: none;
 }
 
 .input-data {
@@ -270,48 +329,52 @@ button {
     width: 100%;
     padding-top: 9.5px;
     padding-bottom: 9.5px;
+    padding-right: 12px;
     border: none;
 }
 
+
+/* TABELA 2 */
 .table {
     padding: 42px 24px;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+
 }
 
 .content-table {
     background: #E7E7E7;
-    border-radius: 25px;
+    border-radius: 10px;
+    display: flex;
+    width: 100%;
+
 }
 
-/* TABELA 2 */
-
-tr {
-    min-width: max-content;
+.tabela-cadastrados {
+    display: flex;
+    align-items: flex-start;
+    margin: auto;
+    flex-direction: column;
+    
 }
 
 .item {
     display: flex;
-    gap: 9.7em;
-    align-items: baseline;
+    gap: 3.89em;
     color: #39393d;
+    flex-direction: row;
 }
 
 .filter {
-    gap: 195px;
+    gap: 120px;
     font-weight: 700;
 }
 
 tr {
     display: flex;
-    padding: 3px 6px;
-    gap: 12.9em;
-    align-items: baseline;
+    margin: 11px;
+    font-family: 'Courier New', Courier, mono;
     justify-content: flex-start;
-    margin: 9px 2px 9px 2px;
+    width: 100%;
 
-}
-label{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 600;
 }
