--- a/estilo.css
+++ b/estilo.css
@@ -193,7 +193,7 @@ ul li a {
     display: flex;
     line-height: 15px;
     margin-top: 50px;
-    
+
 }
 
 .border-height {
@@ -224,7 +224,7 @@ ul li a {
     top: -60px;
     border-radius: 20px;
     height: auto;
-    margin-bottom:20px;
+    margin-bottom: 20px;
     width: 100%;
 }
 
@@ -311,7 +311,7 @@ button {
     background: #b2b2b2;
     color: #494949;
     padding: 6.1px 22px;
-    
+
 }
 
 .cadastrar {
@@ -355,7 +355,7 @@ button {
     align-items: flex-start;
     margin: auto;
     flex-direction: column;
-    
+
 }
 
 .item {
@@ -377,4 +377,222 @@ tr {
     justify-content: flex-start;
     width: 100%;
 
+}
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 700px) {
+    body {
+        line-height: 1;
+        width: 100.1%;
+    }
+
+    .container {
+        max-width: 1110px;
+        width: 81%;
+        margin: 0 auto;
+        height: 62px;
+    }
+
+
+    .container-header {
+        width: 100%;
+        height: 116px;
+        background-color: #614DD8;
+    }
+
+    ul li a {
+        color: #FFFFFF;
+        font-weight: 900;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 0.7rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        width: 100%;
+    }
+
+
+
+
+    .navigation {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+
+
+
+
+    .content-white {
+        background-color: #fff;
+        position: relative;
+        top: -60px;
+        border-radius: 20px;
+        height: auto;
+        margin-bottom: 20px;
+        width: 81%;
+    }
+
+
+
+    h3 {
+        font-size: 0.9rem;
+        padding: 15px 0px 5px 7px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: bold;
+        width: 100%;
+    }
+
+
+    p {
+        font-size: 0.7rem;
+        padding: 4px 8px;
+        font-weight: 100;
+        font-family: sans-serif;
+        color: #494949;
+        width: 84%;
+    }
+
+
+
+
+    .table {
+        padding: 17px 5px;
+        display: flex;
+        width: 95%;
+        margin: 8px;
+    }
+
+
+
+    .tabela-cadastrados {
+        display: flex;
+        align-items: flex-start;
+        margin: auto;
+        flex-direction: column;
+    }
+
+
+    .content-table {
+        background: #E7E7E7;
+        border-radius: 7px;
+        display: flex;
+        width: 97%;
+    }
+
+
+
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+
+    .filter {
+        gap: 36px;
+        font-weight: 700;
+        font-size: 9px;
+        margin-left: 12px;
+    }
+
+
+
+    tr {
+        display: flex;
+        margin: 9px;
+        font-family: 'Courier New', Courier, mono;
+        width: 82%;
+        font-size: 10px;
+    }
+
+
+
+
+    .item {
+        display: flex;
+        gap: 2.2em;
+        color: #39393d;
+        align-items: stretch;
+    }
+
+
+
+    .botoes {
+        display: flex;
+        gap: 59px;
+        margin-top: 0px;
+        margin-left: 0px;
+        padding: 11px;
+        flex-wrap: wrap;
+        flex-direction: row;
+    }
+
+
+    ul li {
+        margin-top: 23px;
+        margin-right: 9px;
+    }
+
+
+    .logo {
+        display: flex;
+        line-height: 0px;
+        margin-top: 29px;
+    }
+
+
+
+
+
+    .cadastrar {
+        background: #2FC6A1;
+        color: #fff;
+        font-size: smaller;
+        font-weight: bold;
+        /* padding: 5px 28px; */
+        text-decoration: none;
+        display: flex;
+    }
+
+
+
+    button {
+        border-radius: 1rem;
+        border: none;
+        padding: 4.1px 15px;
+    }
+}
+
+/* area cadastro */
+
+.input-main {
+
+    border-radius: 3em;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 9px;
+    padding-right: 49px;
+    font-size: 10px
+}
+.input-data {
+    border-radius: 1em;
+    width: 100%;
+    padding-top: 1.5px;
+    padding-bottom: 1.5px;
+    padding-right: 1px;
+    font-size: 11px;
+}
+
+h2{
+font-size: 0.9rem;
+padding: 12px;
 }
