--- a/body {.css
+++ b/body {.css
@@ -1,42 +1,57 @@
-body {
-    line-height: 1;
-    width: 95.1%;
-}
-
-.container {
-    max-width: 1110px;
-    width: 81%;
-    margin: 0 auto;
-    height: 62px;
+h2 {
+    font-size: 0.9rem;
+    padding: 12px;
 }
 
 
-.container-header {
+media (max-width: 375px)
+.formulario {
+    /* padding: 2px; */
+    gap: 0px;
     width: 100%;
-    height: 116px;
-    background-color: #614DD8;
-}
-
-ul li a {
-    color: #FFFFFF;
-    font-weight: 900;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 0.7rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 100%;
+    margin-bottom: -20px;
+    margin-left: -49px;
 }
 
 
+.label {
+    font-size: 9px;
+    margin-left: 36px;
+}
 
 
-.navigation {
+.input-main {
+    width: 32%;
+    padding-right: 48px;
+    position: relative;
+    border-radius: 3em;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 10px;
+}
+
+
+.input-data {
+    border-radius: 1em;
+    position: relative;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+    width: 68.2%;
+    padding-top: 1.5px;
+    padding-bottom: 1.5px;
+    font-size: 11px;
 }
 
+
+
+.botao1 {
+    display: flex;
+    gap: 13px;
+    margin-top: 0px;
+    margin-left: 6px;
+    padding: 6px;
+    /* flex-wrap: wrap; */
+    /* flex-direction: row; */
+}
 
 
 
@@ -46,173 +61,6 @@ ul li a {
     top: -60px;
     border-radius: 20px;
     height: auto;
-    margin-bottom: 20px;
+    margin-bottom: 47px;
     width: 81%;
-}
-
-
-
-h3 {
-    font-size: 0.9rem;
-    padding: 15px 0px 5px 7px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-    width: 100%;
-}
-
-
-p {
-    font-size: 0.7rem;
-    padding: 4px 8px;
-    font-weight: 100;
-    font-family: sans-serif;
-    color: #494949;
-    width: 84%;
-}
-
-
-
-
-.table {
-    padding: 17px 5px;
-    display: flex;
-    width: 95%;
-    margin: 8px;
-}
-
-
-
-.tabela-cadastrados {
-    display: flex;
-    align-items: flex-start;
-    margin: auto;
-    flex-direction: column;
-}
-
-
-.content-table {
-    background: #E7E7E7;
-    border-radius: 7px;
-    display: flex;
-    width: 97%;
-}
-
-
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-
-.filter {
-    gap: 36px;
-    font-weight: 700;
-    font-size: 9px;
-    margin-left: 12px;
-}
-
-
-
-tr {
-    display: flex;
-    margin: 9px;
-    font-family: 'Courier New', Courier, mono;
-    width: 82%;
-    font-size: 10px;
-}
-
-
-
-
-.item {
-    display: flex;
-    gap: 2.2em;
-    color: #39393d;
-    align-items: stretch;
-}
-
-
-
-.botoes {
-    display: flex;
-    /* gap: 59px; */
-    /* margin-top: 72px; */
-    /* margin-left: 257px; */
-    padding: 11px;
-    flex-wrap: wrap;
-    flex-direction: row;
-}
-
-
-ul li {
-    margin-top: 23px;
-    margin-right: 9px;
-}
-
-
-.logo {
-    display: flex;
-    line-height: 0px;
-    margin-top: 29px;
-}
-
-
-
-
-
-.cadastrar {
-    background: #2FC6A1;
-    color: #fff;
-    font-size: smaller;
-    font-weight: bold;
-    /* padding: 5px 28px; */
-    text-decoration: none;
-    display: flex;
-}
-
-
-
-button {
-    display: flex;
-    border-radius: 1rem;
-    border: none;
-    background: #b2b2b2;
-    color: #494949;
-    padding: 4.1px 15px;
-}
-
-
-.formulario {
-    padding: 5px;
-    display: flex;
-    gap: 73px;
-    flex-direction: row;
-    width: 100%;
-}
-
-
-
-.input-main {
-    width: 46%;
-    padding-right: 48px;
-    position: relative;
-    border-radius: 3em;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    font-size: 10px;
-    margin: 0 auto;
-}
-
-
-
-.input-data {
-    border-radius: 1em;
-    position: relative;
-    display: flex;
-    width: 65%;
-    padding-top: 1.5px;
-    padding-bottom: 1.5px;
-    font-size: 11px;
-    margin-left: 47px;
 }
