--- a/body {.css
+++ b/body {.css
@@ -1,56 +1,42 @@
-h2 {
-    font-size: 0.9rem;
-    padding: 12px;
+body {
+    line-height: 1;
+    width: 100.1%;
+}
+
+.container {
+    max-width: 1110px;
+    width: 81%;
+    margin: 0 auto;
+    height: 62px;
 }
 
 
-media (max-width: 375px) .formulario {
-    /* padding: 2px; */
-    gap: 0px;
+.container-header {
     width: 100%;
-    margin-bottom: -20px;
-    margin-left: -49px;
+    height: 116px;
+    background-color: #614DD8;
+}
+
+ul li a {
+    color: #FFFFFF;
+    font-weight: 900;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 0.7rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    width: 100%;
 }
 
 
-.label {
-    font-size: 9px;
-    margin-left: 36px;
-}
 
 
-.input-main {
-    width: 32%;
-    padding-right: 48px;
-    position: relative;
-    border-radius: 3em;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    font-size: 10px;
-}
-
-
-.input-data {
-    border-radius: 1em;
-    position: relative;
+.navigation {
     display: flex;
-    width: 68.2%;
-    padding-top: 1.5px;
-    padding-bottom: 1.5px;
-    font-size: 11px;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
-
-
-.botao1 {
-    display: flex;
-    gap: 13px;
-    margin-top: 0px;
-    margin-left: 6px;
-    padding: 6px;
-    /* flex-wrap: wrap; */
-    /* flex-direction: row; */
-}
 
 
 
@@ -62,4 +48,211 @@ media (max-width: 375px) .formulario {
     height: auto;
     margin-bottom: 47px;
     width: 81%;
+}
+
+
+
+h3 {
+    font-size: 0.9rem;
+    padding: 15px 0px 5px 7px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    width: 100%;
+}
+
+
+p {
+    font-size: 0.7rem;
+    padding: 4px 8px;
+    font-weight: 100;
+    font-family: sans-serif;
+    color: #494949;
+    width: 84%;
+}
+
+
+
+
+.table {
+    padding: 17px 5px;
+    display: flex;
+    width: 95%;
+    margin: 8px;
+}
+
+
+
+.tabela-cadastrados {
+    display: flex;
+    align-items: flex-start;
+    margin: auto;
+    flex-direction: column;
+}
+
+
+.content-table {
+    background: #E7E7E7;
+    border-radius: 7px;
+    display: flex;
+    width: 97%;
+}
+
+
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+
+.filter {
+    gap: 36px;
+    font-weight: 700;
+    font-size: 9px;
+    margin-left: 12px;
+}
+
+
+
+tr {
+    display: flex;
+    margin: 9px;
+    font-family: 'Courier New', Courier, mono;
+    width: 82%;
+    font-size: 10px;
+}
+
+
+
+
+.item {
+    display: flex;
+    gap: 2.2em;
+    color: #39393d;
+    align-items: stretch;
+}
+
+
+
+.botoes {
+    display: flex;
+    /* gap: 59px; */
+    /* margin-top: 0px; */
+    /* margin-left: 0px; */
+    padding: 11px;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+
+ul li {
+    margin-top: 23px;
+    margin-right: 9px;
+}
+
+
+.logo {
+    display: flex;
+    line-height: 15px;
+    margin-top: 22px;
+}
+
+
+
+
+
+.cadastrar {
+    background: #2FC6A1;
+    color: #fff;
+    font-size: smaller;
+    font-weight: bold;
+    /* padding: 5px 28px; */
+    text-decoration: none;
+    display: flex;
+}
+
+
+
+button {
+    border-radius: 1rem;
+    border: none;
+    padding: 4.1px 15px;
+}
+
+.input-main {
+    width: 100%;
+    position: relative;
+    border-radius: 3em;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    font-size: 10px;
+}
+
+h2 {
+    font-size: 0.9rem;
+    padding: 12px;
+}
+
+.formulario {
+    padding: 5px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    width: 80%;
+
+}
+
+.label {
+    font-size: 9px;
+    margin-left: 5px;
+}
+
+.botao1 {
+    display: flex;
+    gap: 13px;
+    margin-top: -30px;
+    margin-left: 116px;
+    padding: 11px;
+    flex-direction: row;
+
+}
+
+.botao-cadastrar {
+    display: flex;
+    gap: 13px;
+    padding: 11px;
+    flex-direction: row;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer-principal {
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    background: #242424;
+    color: #b2b2b2;
+}
+
+.footer-final {
+    background: #0e0e0e;
+    font-size: 9px;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+}
+
+h4 {
+    color: #FFFFFF;
+    font-weight: 900;
+    font-size: 19px;
+    padding: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.texto-footer {
+    color: #b2b2b2;
+    text-align: center;
 }
